--- a/Car Searching/style.css
+++ b/Car Searching/style.css
@@ -4,15 +4,30 @@
     background-color: black;
 }
 
-.d-block{
+.d-block {
     height: 550px;
+    object-fit: cover;
+}
+
+/* Media queries for responsive design */
+@media (max-width: 767.98px) {
+    .d-block {
+        height: 300px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .d-block {
+        height: 200px;
+    }
 }
 
 .cars>h1{
     color: white;
     font-weight: bolder;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .one{
